--- a/kashish.css
+++ b/kashish.css
@@ -187,3 +187,232 @@ ul{
     }
   }
 
+
+
+
+  /*new*/
+  @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Tinos&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  scroll-behavior: smooth;
+  font-family: 'Tinos', serif;
+}
+
+h4 {
+  padding: 0.5rem 0;
+}
+
+.container-9 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+  padding: 1rem 0.5rem;
+}
+
+.box-container {
+  padding: 0.5rem 0.5rem;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border-radius: 10px;
+  display: none;
+}
+
+.box-container:nth-child(1),
+.box-container:nth-child(2),
+.box-container:nth-child(3) {
+  display: inline-block;
+  transition: 0.2s ease;
+}
+
+.box-container img {
+  border-radius: 10px;
+}
+
+.box-container img:hover {
+  transform: scale(1.02);
+  border-radius: 10px;
+  transition: 0.5s ease;
+}
+
+.load-more-btn {
+  display: block;
+  width: auto;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.load-more-btn button {
+  padding: 1rem 1rem;
+  width: auto;
+  color: white;
+  background-color: orange;
+  border-radius: 5px;
+  border: none;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.load-more-btn button:hover {
+  background-color: pink;
+}
+
+.load-more-btn button:active {
+  background-color: orange;
+}
+
+@media (max-width: 500px) {
+  .container-9 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 20px;
+    padding: 1rem 0.5rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .container-9 {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-gap: 1rem;
+    padding: 1rem 0.5rem;
+  }
+}
+
+#more {display: none;}
+/*html {
+    font-size: 10px;
+  }
+  
+  body {
+    max-width: 660px;
+    font-family: Arial, sans-serif;
+    font-size: 1.6rem;
+    text-align: center;
+    color: #263238;
+    background-color: #bcc7ce;
+  }
+  
+  body::before {
+    content: "";
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(
+        to left,
+        rgba(188, 199, 206, 0.9),
+        rgba(188, 199, 206, 0.9)
+      ),
+      url("https://m.media-amazon.com/images/I/41tRMSNSQfL._AC_UF894,1000_QL80_.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }*/
+  
+  #title {
+    margin: 0;
+    
+  }
+  
+  #title,
+  #description {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  
+  #survey-form {
+    position: relative;
+    margin: 30px;
+    padding: 10px;
+    padding-right: 10px;
+    border-radius: 10px;
+    background-color: #b383a1;
+    box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.3);
+  }
+  
+  label,
+  fieldset {
+    display: flex;
+    align-items: center;
+    margin: 15px 0 5px 0;
+    font-size: 1.4rem;
+  }
+  
+  fieldset {
+    flex-direction: column;
+    align-items: flex-start;
+    border-color: #263238;
+  }
+  
+  fieldset label {
+    gap: 5px;
+    text-align: left;
+  }
+  
+  input,
+  select,
+  textarea,
+  button {
+    box-sizing: border-box;
+    display: block;
+    border: 1px solid #263238;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100%;
+    font-family: inherit;
+    color: #263238;
+    background: #f5f5f5;
+  }
+  
+  input::placeholder {
+    color: rgba(38, 50, 56, 0.5);
+  }
+  
+  select,
+  select option {
+    color: #263238;
+  }
+  
+  select:invalid,
+  select option[value=""] {
+    color: rgba(38, 50, 56, 0.5);
+  }
+  
+  input[type="radio"],
+  input[type="checkbox"] {
+    margin-top: 0;
+    width: auto;
+  }
+  
+  textarea {
+    min-height: 100px;
+    resize: vertical;
+  }
+  
+  small {
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+  
+  button {
+    color: #f5f5f5;
+    background-color: #263238;
+    transition: background 0.3s;
+    cursor: pointer;
+  }
+  
+  button:hover,
+  button:focus-visible {
+    background-color: rgba(38, 50, 56, 0.9);
+  }
+  
